--- a/docker/prestashop/docker-compose.yml
+++ b/docker/prestashop/docker-compose.yml
@@ -1,6 +1,47 @@
 version: "3"
 
 services:
+
+  httpd:
+    image: alterway/httpd-prestashop:latest
+    volumes:
+      - "presta_shop:/var/www/"
+    environment:
+      HTTPD__DocumentRoot: "/var/www"
+      HTTPD_a2enmod: "rewrite status expires headers deflate remoteip"
+      HTTPD__DirectoryIndex: "index.php index.html"
+      HTTPD_Directory_AllowOverride: "All"
+      HTTPD_Directory_Options: "-Indexes +FollowSymLinks"
+      HTTPD__LogFormat:  '"%a %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\"" common'
+      HTTPD__RemoteIPHeader: "X-Real-IP"
+      PHPFPM: "php:9000"
+      PHPFPM_CONFIG: "timeout=65 retry=5 ping=2"
+    networks:
+      - mysql-net
+  php:
+    image: alterway/prestashop-php:5.6-fpm
+    volumes:
+      - "presta_shop:/var/www/"
+    environment:
+      PHP_php5enmod: "bcmath mbstring pcntl zip pdo_mysql mysqli opcache gd "
+      PHP__date.timezone: '"Europe/Paris"'
+      PHP__memory_limit: "512M"
+      PHP__file_uploads: "on"
+      PHP__max_file_uploads: "20"
+      PHP__upload_max_filesize: "32M"
+      PHP__max_execution_time: "60"
+      PHP__max_input_time: "180"
+      PHP__opcache.enable: "on"
+      PHP__display_errors: "Off"
+      MYSQL_DATABASE: prestashopdb
+      MYSQL_USER: prestashop
+      MYSQL_PASSWORD: pr3stash0p
+      MYSQL_HOST: "mysql-master"
+      DOMAIN: demo.local
+      VIRTUAL_HOST: ${SHOPNAME}.demo.local
+    networks:
+      - mysql-net
+
   mysql-master:
     image: bitnami/mysql:latest
     ports:
@@ -43,9 +84,27 @@ services:
     networks:
       - mysql-net
 
+  varnish:
+    image: alterway/varnish:4.0
+    ports:
+      - 80:80
+    environment:
+      CACHE_SIZE: '1G'
+      #SERVICE_80_NAME: "${SHOPNAME}"
+      #SERVICE_80_TAGS: 'http'
+      BACKEND_PORT_80_TCP_PORT: "80"
+      BACKEND_PORT_80_TCP_ADDR: "httpd"
+    depends_on:
+       - httpd
+    networks:
+      - mysql-net
+
 volumes:
   lib_mysql:
     driver: local
+  prestashop:
+    driver: local
+
 networks:
   mysql-net:
     driver: overlay
