--- a/docker/prestashop/docker-compose.yml
+++ b/docker/prestashop/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       HTTPD__RemoteIPHeader: "X-Real-IP"
       PHPFPM: "php:9000"
       PHPFPM_CONFIG: "timeout=65 retry=5 ping=2"
+    ports:
+      - 80:80
     networks:
       - mysql-net
   php:
@@ -84,20 +86,20 @@ services:
     networks:
       - mysql-net
 
-  varnish:
-    image: alterway/varnish:4.0
-    ports:
-      - 80:80
-    environment:
-      CACHE_SIZE: '1G'
-      #SERVICE_80_NAME: "${SHOPNAME}"
-      #SERVICE_80_TAGS: 'http'
-      BACKEND_PORT_80_TCP_PORT: "80"
-      BACKEND_PORT_80_TCP_ADDR: "httpd"
-    depends_on:
-       - httpd
-    networks:
-      - mysql-net
+  #varnish:
+  #  image: alterway/varnish:4.0
+  # ports:
+  #    - 80:80
+  #  environment:
+  #    CACHE_SIZE: '1G'
+  #    SERVICE_80_NAME: "${SHOPNAME}"
+  #    SERVICE_80_TAGS: 'http'
+  #    BACKEND_PORT_80_TCP_PORT: "80"
+  #    BACKEND_PORT_80_TCP_ADDR: "httpd"
+  #  depends_on:
+  #     - httpd
+  #  networks:
+  #    - mysql-net
 
 volumes:
   lib_mysql:
