--- a/docker/prestashop/docker-compose.yml
+++ b/docker/prestashop/docker-compose.yml
@@ -1,14 +1,13 @@
 version: "3"
 
 services:
-
   httpd:
     image: alterway/httpd-prestashop:latest
     volumes:
       - "prestashop:/var/www/"
     env_file:
-      - env/apache.env
-      - env/php-fpm.env
+      - ${ADMIN_HOME}/env/apache.env
+      - ${ADMIN_HOME}/env/php-fpm.env
     ports:
       - 80:80
     networks:
@@ -18,8 +17,8 @@ services:
     volumes:
       - prestashop:/var/www/
     env_file:
-      - env/php.env
-      - env/mysql.env
+      - ${ADMIN_HOME}/env/php.env
+      - ${ADMIN_HOME}/env/mysql.env
     environment:
       - MYSQL_DATABASE
       - MYSQL_USER
@@ -34,8 +33,8 @@ services:
     volumes:
       - prestashop:/var/www/
     env_file:
-      - env/php.env
-      - env/mysql.env
+      - ${ADMIN_HOME}/env/php.env
+      - ${ADMIN_HOME}/env/mysql.env
     environment:
       - MYSQL_DATABASE
       - MYSQL_USER
